--- a/src/ifree/res/values-ru/strings.xml
+++ b/src/ifree/res/values-ru/strings.xml
@@ -1061,5 +1061,14 @@
 
     <string name="buy_vip_title_from_input">Начать общение с пользователем можно, если у вас есть VIP-статус</string>
     <string name="mutual_like_popup_text">Ваша симпатия взаимна!</string>
-    <string name="mutual_like_popup_button">Сказать "Привет"</string>
+    <string name="mutual_like_popup_button">Сказать \"Привет\"</string>
+
+    <string name="people_nearby_access_to_location_description">Чтобы посмотреть, кто находится рядом с вами, разрешите доступ к геолокации.</string>
+    <string name="people_nearby_not_enought_money">Для доступа к функционалу \"Люди рядом\" вам не хватает монет</string>
+
+    <string name="people_nearby_not_found_title">Рядом с Вами пока нет пользователей</string>
+    <string name="people_nearby_not_found_description">Чтобы попробовать еще раз, удерживайте палец в центре экрана</string>
+
+    <string name="NSLocationWhenInUseUsageDescription">Для получения доступа к функционалу вам необходимо разрешить доступ.</string>
+
 </resources>
